# AVR

./: .gitignore  CMakeLists.txt  README.md
FW/: CMakeLists.txt  main.c
_Project/: toolchain.cmake
